// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshot default 1`] = `
<button
  class="component primary sm emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot no emphasis 1`] = `
<button
  class="component primary sm"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot size lg 1`] = `
<button
  class="component primary lg emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot size md 1`] = `
<button
  class="component primary md emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot size sm 1`] = `
<button
  class="component primary sm emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant destructive 1`] = `
<button
  class="component destructive sm emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant gray 1`] = `
<button
  class="component gray sm emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant primary 1`] = `
<button
  class="component primary sm emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant secondary 1`] = `
<button
  class="component secondary sm emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot width 100% 1`] = `
<button
  class="component primary sm emphasis width100"
  data-test="Button"
  type="button"
/>
`;
